<resources>
    <string name="app_name">Chroma</string>
    <string name="Option1">Mood</string>
    <string name="Option2">Money Out</string>
    <string name="Option3">Alcohol</string>
    <string name="Option4">Navigo</string>
    <string name="Option5">Car</string>
    <string name="Option6">Money In</string>
    <string name="Option7">Movies</string>
    <string name="Option8">Books</string>
    <string name="Option9">Sleep</string>
    <string name="Option10">Sport</string>
    <string name="Option11">Velib</string>
    <string name="Option12">…</string>
    <string name="MoodHint">Write a few words about your day…</string>
    <string name="AddMoney">Add</string>
    <string name="HintDescTransaction">Description…</string>
    <string name="HintValue">0,00</string>
    <string name="HintDescAlcohol">What did you drink…</string>
    <string name="HintVolume">500</string>
    <string name="HintDegree">5</string>
    <string name="AlcoholUnit">%</string>
    <string name="ua">ua</string>
    <string name="VolumeUnit">mL</string>
    <string name="KilometersUnit">km</string>
    <string name="RevertTransport">Revert last trip !</string>
    <string name="HintStation">Saint-Ambroise</string>
    <string name="HintLine">M9</string>
    <string name="AddStep">Add trip step</string>
    <string name="AddTrip">Submit trip</string>
    <string name="HintTripPrice">1.9</string>
    <string name="Currency">€</string>
    <string name="DeleteItemQuestion">Do you want to delete this item?</string>
    <string name="DeleteTitle">DELETE</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="InvalidTransaction_Amount">Amount is missing or cannot be parsed.</string>
    <string name="InvalidTransaction_Category">Category is missing or invalid.</string>
    <string name="InvalidTransaction_Description">Description is missing or invalid.</string>
    <string name="Saved">Saved!</string>
    <string name="TripMinimumTwoStepsRequired">A minimum of two steps is required to register a trip.</string>
    <string name="TripStationMandatory">Station field cannot be blank.</string>
    <string name="TripLineMandatory">Line field cannot be blank.</string>
    <string name="TripCostMandatory">Trip cost is required.</string>
    <string name="TripCannotRevertEmptyTrip">No trip to reverse.</string>
    <string name="TripSubmitStart">Start</string>
    <string name="CarTripTimeBeginHint">11:00</string>
    <string name="CarTripTimeEndHint">14:20</string>
    <string name="CarTripKMBeginHint">0</string>
    <string name="CarTripKMEndHint">10000</string>
    <string name="CarTripDestinationHint">Bangkok</string>
    <string name="AlreadyACarTrip">Cannot register a new car trip start before the current one is ended.</string>
    <string name="OngoingTrip">Trip started…</string>
    <string name="CarTripOriginHint">Paris</string>
    <string name="TripSubmitEnd">End</string>
    <string name="UnableToEndTrip">Error ending car trip.</string>
    <string name="InvalidEndKM">What sorcery is this?!  Have you gone backwards?</string>
    <string name="UsingCurrentTime">Using current time since no time was given.</string>
    <string name="MissingDataLocationAndKMRequired">Location and KM count required.</string>
    <string name="HintAuthor">Author…</string>
    <string name="HintTitle">Title…</string>
    <string name="HintBookDescription">Write a few words about this book…</string>
    <string name="HintReal">Director</string>
    <string name="MovieDescriptionHint">Write a few words about this movie…</string>
    <string name="AddMovie">Watch another movie !</string>
    <string name="MovieTitleAndNotesRequired">Title and description are required.</string>
    <string name="Summary">Total :</string>
    <string name="HintBookTitle">Book title…</string>
    <string name="HintBookAuthor">Book author…</string>
    <string name="AddBook">Add another book review !</string>
    <string name="BookNotesRequired">Write at least one word…</string>
    <string name="BookDetailsRequired">Book author and title are required.</string>
    <string name="OpenBooksFileName">openbooks.json</string>
    <string name="CurrentlyOpenBooks">Currently open books:</string>
    <string name="BookCloseQuestion">Close book?</string>
    <string name="CannotReOpenBook">This book has been closed and cannot be reopened!</string>
    <string name="ExportOK">Data export was successful.</string>
    <string name="export">Export data</string>
    <string name="exportAll">Export all data</string>
    <string name="ExportFrom">Export data from:</string>
    <string name="ExportTo">Export up to:</string>
    <string name="WrongExportDates">Please select valid dates.</string>
    <string name="FullExportFilename">chroma_full_export.json</string>
    <string name="settings">Settings</string>
    <string name="pref_encryptTitle">Encrypt data</string>
    <string name="pref_encryptSummary">This is used to encrypt the exported data. If used, you must set a password below.</string>
    <string name="pref_encryptPWDTitle">Encryption password</string>
    <string name="pref_encryptPWDSummary">Please don\'t type password…</string>
    <string name="pref_toggleTitle">Toggle activities</string>
    <string name="pref_toggleSummary">Use this to show/hide activities on the main screen. Note that if you hide an activity, the corresponding data is not deleted.</string>
    <string name="ExportKO_NOPWDProvided">Export failed: encryption is activated but no password has been provided.</string>
    <string name="ExportOKWithEncryption">Data export (with encryption) was successful.</string>
    <string name="EncryptionParamsFile">encryption.config</string>
    <string name="ExportKO">Export failed.</string>
    <string name="ExportKO_EncryptionParamWriteFailed">Export failed: could not write encryption details to secure storage.</string>
    <string name="ExportKO_InvalidNumberOfArguments">Export failed: export task was not called properly.</string>
    <string name="SleepHint">How was your night?</string>
    <string name="BedTime">Bedtime:</string>
    <string name="WakeUpTime">Wake up time:</string>
    <string name="pref_sleep_startTitle">Hour when to start detecting airplane-mode \"on\"</string>
    <string name="pref_sleep_endTitle">Hour when to start detecting airplane-mode \"off\"</string>
    <string name="pref_sleep_startSummary">After this hour, the sleep monitor will start listening for airplane-mode \"on\" to register your bedtime.</string>
    <string name="pref_sleep_endSummary">After this hour, the sleep monitor will start listening for airplane-mode \"off\" to register your wakeup time.</string>
    <string name="of">of</string>
    <string name="MissingAlcoholContent">Please specify the ABV of your drink.</string>
    <string name="MissingAlcoholVolume">Please specify the volume of your drink.</string>
    <string name="AlcoholComment">Optionnal comment</string>
    <string name="MissingAlcoholDescription">Please specify what you drank.</string>
    <string name="Cancel">Cancel</string>
    <string name="pref_saveModeTitle">Save mode</string>
    <string name="pref_saveModeSummaryOn">Implicit Save is on: data will automatically be saved when you exit an activity, unless you cancel it.</string>
    <string name="pref_saveModeSummaryOff">Implicit Save is off: you will have to explicitly save data when exiting an activity, otherwise it won\'t be saved.</string>
    <string name="pref_saveModeOn">On</string>
    <string name="pref_saveModeOff">Off</string>
    <string name="Save">Save data</string>
    <string name="SexComment">Optionnal comment…</string>
    <string name="HintPartner">With whom?</string>
    <string name="PartnerRequired">At least tell us who it was…</string>
    <string name="AddSex">I got lucky again!</string>
    <string name="YearlyExportFilenamePrefix">chroma_yearly_export_</string>
    <string name="MonthlyExportFilenamePrefix">chroma_monthly_export_</string>
    <string name="WeeklyExportFilenamePrefix">chroma_weekly_export_</string>
    <string name="JSONExtension">.json</string>
    <string name="pref_periodExportTitle">Period export policy</string>
    <string name="pref_periodExportSummary">You can program Chroma to export your data periodically.</string>
    <string name="pref_commuteSummary">You can specify your commute here, for easy input in the Transport activity.</string>
    <string name="pref_commuteTitle">Commute</string>
    <string name="RemoveStep">Remove step</string>
    <string name="InvalidPasswordRepeat">Passwords did not match.</string>
    <string name="EmptyPassword">Password cannot be null.</string>
    <string name="pref_encryptSummaryOn">Data Encryption is on: exports will be encrypted with the password specified below.</string>
    <string name="pref_encryptSummaryOff">Data Encryption is off: exports will not be encrypted.</string>
    <string name="pref_appPasswordTitle">Protect the app with a password</string>
    <string name="pref_appPasswordSummaryOn">Application Password is on: Chroma will not open with the password specified below.</string>
    <string name="pref_appPasswordSummaryOff">Application Password is off: Chroma will not prompt for a password at start-up.</string>
    <string name="pref_appPasswordSummary">Choose your password wisely!</string>
    <string name="PleaseInputPassword">Please provide the password to open the app.</string>
    <string name="IncorrectPassword">Incorrect password.</string>
    <string name="PleaseEnterAppPassword">Please Enter Application Password</string>
    <string name="RestartRequiredDoItNowQuestion">Chroma needs to be restarted for your changes to be taken into account. Do you wish to restart the application now?</string>
    <string name="RestartNow">Restart now</string>
    <string name="RestartLater">Restart later</string>
    <string name="BackArrow">Back arrow</string>
    <string name="ForwardArrow">Forward arrow</string>
    <string name="addTrip">Add trip</string>
    <string name="revertTrip">Revert last trip</string>
    <string name="reverseTrip">Reverse last trip</string>
    <string name="commuteTrip">Add commute</string>
    <string name="BookReviewOfTheDay">Today\'s book reviews</string>
    <string name="SpecifyExportDates">Please select export start and end dates.</string>
    <string name="notification_channel_name">ChromaNotificationChannel</string>
    <string name="pref_moodNotificationTitle">Daily mood data reminder</string>
    <string name="pref_moodNotificationSummary">You can specify a or several moments in a day when Chroma will prompt you to write a few words about your day.</string>
    <string name="TripInvalid">You entered invalid trip data.</string>
    <string name="addTransaction">Add transaction</string>
    <string name="InvalidTrip_Amount">Trip cost is missing or cannot be parsed.</string>
    <string name="InvalidIncome_AllValuesRequired">All value are required.</string>
    <string name="InvalidCarTrip_Distance">Distance fields are invalid or cannot be parsed.</string>
    <string name="InvalidDrink_VolDeg">Volume and/or ABV fields are invalid or cannot be parsed.</string>
    <string name="addSpending">Add spending</string>
    <string name="addIncome">Add income</string>
    <string-array name="transactionsCategories">
        <item>Drinks</item>
        <item>Food</item>
        <item>Cadeaux/Dons</item>
        <item>Factures</item>
        <item>Resto</item>
        <item>Santé &amp; Hygiène</item>
        <item>Tech</item>
        <item>Transport</item>
        <item>Other</item>
    </string-array>
</resources>