<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="140dp"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:hint="@string/CarTripOriginHint"
            android:id="@+id/carTrip_origin"
            android:textSize="15sp"
            android:maxLines="1"
            android:inputType="text"
            android:background="#FAFAFA"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:hint="@string/CarTripKMBeginHint"
            android:id="@+id/carTrip_KMbegin"
            android:textSize="15sp"
            android:maxLines="1"
            android:inputType="number"
            android:background="#FAFAFA"
            android:gravity="center_vertical|end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/KilometersUnit"
            android:paddingEnd="@dimen/half_activity_vertical_margin"
            android:paddingStart="@dimen/half_activity_vertical_margin"
            android:gravity="center_vertical|start"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="15sp"
            android:maxLines="1"
            android:gravity="center"
            android:hint="@string/CarTripTimeBeginHint"
            android:id="@+id/carTrip_TimeBeginDisplay"
            android:background="#FAFAFA"
            android:focusableInTouchMode="true"
            android:inputType="time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:hint="@string/CarTripDestinationHint"
            android:id="@+id/carTrip_destination"
            android:textSize="15sp"
            android:maxLines="1"
            android:inputType="text"
            android:background="#FAFAFA"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:hint="@string/CarTripKMEndHint"
            android:id="@+id/carTrip_KMEnd"
            android:textSize="15sp"
            android:maxLines="1"
            android:inputType="number"
            android:background="#FAFAFA"
            android:gravity="center_vertical|end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/KilometersUnit"
            android:paddingEnd="@dimen/half_activity_vertical_margin"
            android:paddingStart="@dimen/half_activity_vertical_margin"
            android:gravity="center_vertical|start"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="15sp"
            android:maxLines="1"
            android:gravity="center"
            android:hint="@string/CarTripTimeEndHint"
            android:id="@+id/carTrip_TimeEndDisplay"
            android:background="#FAFAFA"
            android:focusableInTouchMode="true"
            android:inputType="time"/>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/TripSubmitStart"
            android:id="@+id/carTrip_SubmitStart"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/TripSubmitEnd"
            android:id="@+id/carTrip_SubmitEnd"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    </LinearLayout>
</LinearLayout>