<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Space
        android:layout_width="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExportFrom"/>

    <NumberPicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startPicker"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExportTo"/>

    <NumberPicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/endPicker"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitExportDates"
        android:text="@string/export"/>

    </LinearLayout>

    <Space
        android:layout_width="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/activity_horizontal_margin"/>

</LinearLayout>