<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/input_field"
    android:padding="@dimen/quarter_activity_vertical_margin">

    <AutoCompleteTextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="12"
        android:textSize="@dimen/input_text"
        android:id="@+id/Station"
        android:maxLines="1"
        android:inputType="text|textCapSentences|textAutoCorrect"
        android:background="@color/colorInputFields"
        android:textColor="@color/colorText"
        android:hint="@string/HintStation"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:id="@+id/Line"
        android:maxLines="1"
        android:inputType="textCapCharacters"
        android:background="@color/colorInputFields"
        android:textColor="@color/colorText"
        android:textSize="@dimen/input_text"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:hint="@string/HintLine"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/AddStep"
        android:src="@drawable/black_plus_16dp"
        android:id="@+id/AddStep"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <ImageView
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/RemoveStep"
        android:src="@drawable/black_minus_16dp"
        android:id="@+id/RemoveStep"/>

</LinearLayout>