<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="140dp"
    android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:id="@+id/BookTitle"
            android:maxLines="1"
            android:inputType="text|textCapSentences|textAutoCorrect"
            android:background="#FAFAFA"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:hint="@string/HintBookTitle"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:id="@+id/BookAuthor"
            android:maxLines="1"
            android:inputType="text|textCapSentences|textAutoCorrect"
            android:background="#FAFAFA"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:hint="@string/HintBookAuthor"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/AddNewBookButton"
            android:text="@string/AddMoney"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/half_activity_vertical_margin"/>

</LinearLayout>