<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/TextInputGeneric"
                android:background="#FAFAFA"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AlcoholTextBetweenInputFields"
                android:background="#FAFAFA"
                android:textSize="15sp"
                android:visibility="invisible"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:id="@+id/AlcoholSpinnerField"
                android:background="#FAFAFA"
                android:textSize="15sp"
                android:visibility="invisible"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SharedAlcoholLayout"
            android:layout_marginStart="@dimen/half_activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AlcoholTextShared"
                android:background="#FAFAFA"
                android:textSize="15sp"
                android:visibility="invisible"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AlcoholSharedSpinnerField"
                android:background="#FAFAFA"
                android:textSize="15sp"
                android:visibility="invisible"/>

        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/TextInputSpecific"
            android:maxLines="1"
            android:inputType="text|textCapSentences|textAutoCorrect"
            android:background="#FAFAFA"
            android:hint="@string/HintDescAlcohol"
            android:visibility="invisible"
            android:layout_marginStart="@dimen/half_activity_vertical_margin"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/TextInputComment"
            android:maxLines="1"
            android:inputType="text|textCapSentences|textAutoCorrect"
            android:background="#FAFAFA"
            android:hint="@string/AlcoholComment"
            android:visibility="visible"
            android:layout_marginStart="@dimen/half_activity_vertical_margin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:id="@+id/VolumeAndDegreeLayout">

        <EditText
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:textSize="15sp"
            android:id="@+id/DrinkVolume"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:background="#FAFAFA"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:gravity="center_vertical|end"
            android:hint="@string/HintVolume"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textSize="15sp"
            android:text="@string/VolumeUnit"
            android:background="#FAFAFA"
            android:paddingEnd="@dimen/half_activity_vertical_margin"
            android:paddingStart="@dimen/half_activity_vertical_margin"
            android:gravity="center_vertical|start"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:textSize="15sp"
            android:id="@+id/DrinkDegree"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:background="#FAFAFA"
            android:gravity="center_vertical|end"
            android:hint="@string/HintDegree"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/AlcoholUnit"
            android:textSize="15sp"
            android:background="#FAFAFA"
            android:layout_weight="1"
            android:paddingEnd="@dimen/half_activity_vertical_margin"
            android:paddingStart="@dimen/half_activity_vertical_margin"
            android:gravity="center_vertical|start"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/AddButton"
        android:text="@string/AddMoney"/>
</LinearLayout>