<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_alcohol"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/DateTextView"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:rotation="180"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">


                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textSize="15sp"
                    android:id="@+id/TextDescription"
                    android:maxLines="1"
                    android:inputType="text"
                    android:background="#FAFAFA"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:hint="@string/HintDescAlcohol"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:id="@+id/DrinkVolume"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:background="#FAFAFA"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:gravity="center|right"
                    android:hint="@string/HintVolume"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/volumeUnit"
                    android:text="@string/VolumeUnit"
                    android:background="#FAFAFA"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:gravity="center|left"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:id="@+id/DrinkDegree"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:background="#FAFAFA"
                    android:gravity="center|right"
                    android:hint="@string/HintDegree"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/alcoholUnit"
                    android:text="@string/AlcoholUnit"
                    android:background="#FAFAFA"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:gravity="center|left"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:id="@+id/AddButton"
                    android:text="@string/AddMoney"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"/>

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ListViewAlcohol">

        </ListView>
    </LinearLayout>
</RelativeLayout>